<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/totalTicketTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/totalTicket"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="16dp"
                android:text="@string/totalTicketNumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startlocationTextView"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startlocation" />

            <Spinner
                android:id="@+id/startSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/locationsArray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/endlocationTextView"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/endLocation" />

            <Spinner
                android:id="@+id/endSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/locationsArray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ticketKindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticketkind" />

                <RadioGroup
                    android:id="@+id/ticketTypeButtonGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/oneWayButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/oneWay" />

                    <RadioButton
                        android:id="@+id/roundTripButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/roundTrip" />

                    <RadioButton
                        android:id="@+id/dayPassButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dayPass" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/priorityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/prioritykind" />

                <RadioGroup
                    android:id="@+id/priorityButtonGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/noButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                    <RadioButton
                        android:id="@+id/disabledButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disabled" />

                    <RadioButton
                        android:id="@+id/pregnantButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pregnant" />

                    <RadioButton
                        android:id="@+id/elderlyButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/elderly" />

                    <RadioButton
                        android:id="@+id/veteranButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/veteran" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/useCardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/useCard" />

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>