<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="32dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enterCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/colorBlack"
        android:text="@string/enterCard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cardCardNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardCardNumber" />

        <EditText
            android:id="@+id/cardNumberEditText"
            android:layout_marginLeft="@dimen/spacing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleNumber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cardNameOnCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardNameOnCard" />

        <EditText
            android:id="@+id/nameOnCardEditText"
            android:layout_marginLeft="@dimen/spacing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleName" />
    </LinearLayout>
        <Button
            android:id="@+id/saveCardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/saveCard" />
</LinearLayout>